# shadowbar

./: .gitignore  LICENSE  README.md  pyproject.toml
src/shadowbar/: ProgressBar.py
