[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "shadowbar"
version = "0.1.3"
authors = [
	{ name = "ShadowCrafter", email = "lkoe@bluewin.ch" },
]
description = "A simple to use process based progress bar"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
	"Programming Language :: Python :: 3",
	"License :: OSI Approved :: MIT License",
	"Operating System :: OS Independent",
]

[project.urls]
"Source Code" = "https://github.com/shadowcrafter011/shadowbar"
"Bug Tracker" = "https://github.com/shadowcrafter011/shadowbar/issues"